--- a/long_version/expe.tex
+++ b/long_version/expe.tex
@@ -61,31 +61,31 @@ Table 1 summarizes some properties characteristics of these artificial and real 
 	\centering
 	
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/g1}
+	\includegraphics[scale=0.4]{\lpath/img/g1}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/g1_d}
-	\endminipage
-	\vspace{-0.4cm}
-	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/g2}
-	\endminipage
-	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/g2_d}
+	\includegraphics[scale=0.4]{\lpath/img/g1_d}
 	\endminipage
 	\vspace{-0.4cm}
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/g3}
+	\includegraphics[scale=0.4]{\lpath/img/g2}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/g3_d}
+	\includegraphics[scale=0.4]{\lpath/img/g2_d}
 	\endminipage
 	\vspace{-0.4cm}
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/g4}
+	\includegraphics[scale=0.4]{\lpath/img/g3}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/g4_d}
+	\includegraphics[scale=0.4]{\lpath/img/g3_d}
+	\endminipage
+	\vspace{-0.4cm}
+	\minipage{0.25\textwidth}
+	\includegraphics[scale=0.4]{\lpath/img/g4}
+	\endminipage
+	\minipage{0.25\textwidth}
+	\includegraphics[scale=0.4]{\lpath/img/g4_d}
 	\endminipage
 	
 	\caption{Left figures represent the adjacency matrices (left) for each of the 4 synthetic networks that we used for the prediction evaluation along their respective global degree distribution in the right plots.}
@@ -97,17 +97,17 @@ Table 1 summarizes some properties characteristics of these artificial and real 
 	
 	
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/irvine}
+	\includegraphics[scale=0.4]{\lpath/img/irvine}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/irvine_d}
+	\includegraphics[scale=0.4]{\lpath/img/irvine_d}
 	\endminipage
 	\vspace{-0.4cm}
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/manufacturing}
+	\includegraphics[scale=0.4]{\lpath/img/manufacturing}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/manufacturing_d}
+	\includegraphics[scale=0.4]{\lpath/img/manufacturing_d}
 	\endminipage
 	\caption{Left figures represent the adjacency matrices (left) for each of the 2 real networks that we used for the prediction evaluation along their respective global degree distribution in the right plots.}
 	\label{fig:real_graph}
@@ -130,31 +130,31 @@ All our experimental platform is available online \footnote{https://github.com/d
 	\centering
 	
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/ilfrm_g1_d}
+	\includegraphics[scale=0.4]{\lpath/img/ilfrm_g1_d}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/immsb_g1_d}
-	\endminipage
-	\vspace{-0.4cm}
-	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/ilfrm_g2_d}
-	\endminipage
-	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/immsb_g2_d}
+	\includegraphics[scale=0.4]{\lpath/img/immsb_g1_d}
 	\endminipage
 	\vspace{-0.4cm}
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/ilfrm_g3_d}
+	\includegraphics[scale=0.4]{\lpath/img/ilfrm_g2_d}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/immsb_g3_d}
+	\includegraphics[scale=0.4]{\lpath/img/immsb_g2_d}
 	\endminipage
 	\vspace{-0.4cm}
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/ilfrm_g4_d}
+	\includegraphics[scale=0.4]{\lpath/img/ilfrm_g3_d}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/immsb_g4_d}
+	\includegraphics[scale=0.4]{\lpath/img/immsb_g3_d}
+	\endminipage
+	\vspace{-0.4cm}
+	\minipage{0.25\textwidth}
+	\includegraphics[scale=0.4]{\lpath/img/ilfrm_g4_d}
+	\endminipage
+	\minipage{0.25\textwidth}
+	\includegraphics[scale=0.4]{\lpath/img/immsb_g4_d}
 	\endminipage
 	
 	\caption{Right column is associated to IMMSB and left column to ILFM. Each row is associated to a synthetic networks on which we run the inference procedure. Each figures represent the global degrees distribution for a set of 100 generated networks by the models after its parameters where learned in the corresponding settings.  We also report on these figures two straight lines corresponding of the regression on the degree distribution of the model generated network (dotted) and the regression of the original distribution (dashed) as a qualitative reference.}
@@ -165,17 +165,17 @@ All our experimental platform is available online \footnote{https://github.com/d
 	\centering
 	
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/ilfrm_irvine_d}
+	\includegraphics[scale=0.4]{\lpath/img/ilfrm_irvine_d}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/immsb_irvine_d}
+	\includegraphics[scale=0.4]{\lpath/img/immsb_irvine_d}
 	\endminipage
 	\vspace{-0.4cm}
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/ilfrm_manufacturing_d}
+	\includegraphics[scale=0.4]{\lpath/img/ilfrm_manufacturing_d}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.4]{img/immsb_manufacturing_d}
+	\includegraphics[scale=0.4]{\lpath/img/immsb_manufacturing_d}
 	\endminipage
 	
 	\caption{Right column is associated to IMMSB and left column to ILFM. Each row is associated to a real networks on which we run the inference procedure. Each figures represent the global degrees distribution for a set of 100 generated networks by the models after its parameters where learned in the corresponding settings. We also report on these figures two straight lines corresponding of the regression on the degree distribution of the model generated network (dotted) and the regression of the original distribution (dashed) as qualitative reference.}
@@ -187,24 +187,24 @@ All our experimental platform is available online \footnote{https://github.com/d
 	\centering
 	
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.22]{img/M_e/AUC-ROC/figure_1}
+	\includegraphics[scale=0.22]{\lpath/img/M_e/AUC-ROC/figure_1}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.22]{img/M_e/AUC-ROC/figure_2}
+	\includegraphics[scale=0.22]{\lpath/img/M_e/AUC-ROC/figure_2}
 	\endminipage
 	\vspace{-0.4cm}
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.22]{img/M_e/AUC-ROC/figure_3}
+	\includegraphics[scale=0.22]{\lpath/img/M_e/AUC-ROC/figure_3}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.22]{img/M_e/AUC-ROC/figure_4}
+	\includegraphics[scale=0.22]{\lpath/img/M_e/AUC-ROC/figure_4}
 	\endminipage
 		\vspace{-0.4cm}
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.22]{img/M_e/AUC-ROC/figure_5}
+	\includegraphics[scale=0.22]{\lpath/img/M_e/AUC-ROC/figure_5}
 	\endminipage
 	\minipage{0.25\textwidth}
-	\includegraphics[scale=0.22]{img/M_e/AUC-ROC/figure_6}
+	\includegraphics[scale=0.22]{\lpath/img/M_e/AUC-ROC/figure_6}
 	\endminipage
 	
 	\caption{AUC curves that compare the performance of ILFM and IMMSB on the 4 synthetic networks.}
