--- a/long_version/homophily.tex
+++ b/long_version/homophily.tex
@@ -88,24 +88,24 @@ Note that did not report a block structure for ILFM. The reason is that such a s
 	\centering
 	
 	\minipage{0.17\textwidth}
-	\includegraphics[width=2.94cm, height=3cm]{img/M_g_peaks/figure_6}
+	\includegraphics[width=2.94cm, height=3cm]{\lpath/img/M_g_peaks/figure_6}
 	\endminipage
 		\minipage{0.17\textwidth}
-	\includegraphics[width=2.94cm, height=3cm]{img/M_g_power_law/figure_6}
+	\includegraphics[width=2.94cm, height=3cm]{\lpath/img/M_g_power_law/figure_6}
 	\endminipage
 	\minipage{0.17\textwidth}
-	\includegraphics[width=2.94cm, height=3cm]{img/M_g_regular/figure_6}
+	\includegraphics[width=2.94cm, height=3cm]{\lpath/img/M_g_regular/figure_6}
 	\endminipage
 	%\vspace{-0.3cm}
     \vspace{0.3cm}
 	\minipage{0.16\textwidth}
-	\includegraphics[width=3.5cm, height=4cm]{img/M_g_peaks/graph_dot}
+	\includegraphics[width=3.5cm, height=4cm]{\lpath/img/M_g_peaks/graph_dot}
 	\endminipage
 		\minipage{0.16\textwidth}
-    \hspace{1cm}\includegraphics[width=3.0cm, height=4cm]{img/M_g_power_law/graph_dot} 
+    \hspace{1cm}\includegraphics[width=3.0cm, height=4cm]{\lpath/img/M_g_power_law/graph_dot} 
 	\endminipage
 	\minipage{0.16\textwidth}
-	\includegraphics[width=3.5cm, height=4cm]{img/M_g_regular/graph_dot}
+	\includegraphics[width=3.5cm, height=4cm]{\lpath/img/M_g_regular/graph_dot}
 	\endminipage
 	\caption{Block structure for IMMSB for 3 generated networks. The 3 columns represent 3 different settings. The first row represent the block structure draw on the adjacency matrix. The second row represent the graph of the underlying block structure.}
 	\label{fig:gen_blocks_mmsb}
