--- a/long_version/models.tex
+++ b/long_version/models.tex
@@ -34,11 +34,11 @@ This model makes use of two real hyper-parameters, one for the IBP process ($\al
 	\centering
 	\minipage{0.25\textwidth}\vspace{1cm}
 	\scalebox{0.88}{
-	\input{./img/ilfrm2.tex}}
+	\input{\lpath/img/ilfrm2.tex}}
 	\endminipage
 	\minipage{0.25\textwidth}
 	\scalebox{0.88}{
-		\input{./img/mmsb2.tex}}
+		\input{\lpath/img/mmsb2.tex}}
 	\endminipage
 	\caption{The two graphical representations of (left) the latent feature model and (right) the latent class model. The difference between the two models lies in the way representations are associated to nodes: a fixed representation is used in the case of the latent feature model, whereas the representation in the latent class model varies according to the link considered.}
 	\label{fig:ilfrm}
