--- a/long_version/appendix.tex
+++ b/long_version/appendix.tex
@@ -82,4 +82,4 @@ The count for node $i$ being assigned to membership $k$ is $N_{ik}$. And the cou
 \section{Precision Recall Results}
 \label{sec:precision_recall}
 
-\input{table_results}
+\input{\lpath/t/table_results}
