--- a/long_version/burstiness.tex
+++ b/long_version/burstiness.tex
@@ -97,7 +97,7 @@ The study of this series gives hint about how and when the distribution of the d
 	
 	\begin{figure}[h]
 		\centering
-		\includegraphics[scale=0.4]{img/bp}
+		\includegraphics[scale=0.4]{\lpath/img/bp}
 		\caption{This plot represent the series that constraints the predictive distribution for the burstiness effect in exchangeable graph for N=100 (100 nodes)}.
 		\label{fig:bp}
 	\end{figure}
@@ -354,66 +354,66 @@ James M. Dickey )) ce papier est cite dans LDA pour justifier l'inference approx
 \begin{figure*}[ht]
 	\centering IMMSB\\
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_peaks/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_peaks/figure_1}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_power_law/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_power_law/figure_1}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_regular/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_regular/figure_1}
 	\endminipage
 		\vspace{-0.29cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_peaks/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_peaks/figure_3}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_power_law/figure_3} 
+	\includegraphics[scale=0.27]{\lpath/img/M_g_power_law/figure_3} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_regular/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_regular/figure_3}
 	\endminipage
 		\vspace{-0.28cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_peaks/figure_5}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_peaks/figure_5}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_power_law/figure_5} 
+	\includegraphics[scale=0.27]{\lpath/img/M_g_power_law/figure_5} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/M_g_regular/figure_5}
+	\includegraphics[scale=0.27]{\lpath/img/M_g_regular/figure_5}
 	\endminipage
 
     \vspace{0.2cm}
 	 ILFM
 
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/1/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/1/figure_1}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/2/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/2/figure_1}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/3/figure_1}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/3/figure_1}
 	\endminipage
 		\vspace{-0.29cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/1/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/1/figure_3}
 	\endminipage
 		\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/2/figure_3} 
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/2/figure_3} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/3/figure_3}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/3/figure_3}
 	\endminipage
 		\vspace{-0.28cm}
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/1/figure_5}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/1/figure_5}
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/2/figure_5} 
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/2/figure_5} 
 	\endminipage
 	\minipage{0.27\textwidth}
-	\includegraphics[scale=0.27]{img/ilfm/3/figure_5}
+	\includegraphics[scale=0.27]{\lpath/img/ilfm/3/figure_5}
 	\endminipage
     \caption{Generated Networks with IMMSB (top) and ILFM (bottom) for three different settings (same set than for figure \ref{fig:gen_blocks_mmsb}). The top rows measure the global preferential attachment through the overall degree distribution. The middle row measure the local preferential attachment through the local degree distribution. The last row measure the feature burstiness through the block membership distribution.}
 	\label{fig:gen_burst}
