--- a/t/auc.tex
+++ b/t/auc.tex
@@ -3,31 +3,37 @@
         \centering
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_generator7}
+            \includegraphics[width=\textwidth]{img/corpus/roc_network1}
             \label{fig:mean and std of net14}
             \caption {{\small Network1}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_generator12}
+            \includegraphics[width=\textwidth]{img/corpus/roc_network2}
             \label{fig:mean and std of net14}
             \caption {{\small Network2}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_generator10}
+            \includegraphics[width=\textwidth]{img/corpus/roc_network3}
             \label{fig:mean and std of net14}
             \caption {{\small Network3}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_generator4}
+            \includegraphics[width=\textwidth]{img/corpus/roc_network4}
             \label{fig:mean and std of net14}
             \caption {{\small Network4}}    
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
             \includegraphics[width=\textwidth]{img/corpus/roc_manufacturing}
+            \label{fig:mean and std of net14}
+            \caption {{\small Manufacturing}}    
+        \end{subfigure}
+        \begin{subfigure}[b]{0.300\textwidth}
+            \centering
+            \includegraphics[width=\textwidth]{img/corpus/roc_ucirvine}
             \label{fig:mean and std of net14}
             \caption {{\small Manufacturing}}    
         \end{subfigure}
@@ -45,7 +51,7 @@
         \end{subfigure}
         \begin{subfigure}[b]{0.300\textwidth}
             \centering
-            \includegraphics[width=\textwidth]{img/corpus/roc_propro}
+            \includegraphics[width=\textwidth]{img/corpus/roc_protein}
             \caption {{\small Protein}}    
             \label{fig:mean and std of net14}
         \end{subfigure}
