--- a/long_version/expe_dev.tex
+++ b/long_version/expe_dev.tex
@@ -166,6 +166,17 @@ Concerning the local preferential attachment, that can be evaluated on these art
     Network4 & 0.6 $\pm$ 0.49    & 1.5 $\pm$ 0.1 & 1.8 $\pm$ 0.9 & 204.7 $\pm$ 53.0 \\
     \hline
     \end{tabular}
+
+
+    %% THE GOOD ONE !
+%    __IMMSB__    pvalue             alpha              x_min          n_tail
+%    -----------  -----------------  -----------------  -------------  ------------------
+%    Network 1    1.0 $\pm$ 0.0      2.394 $\pm$ 0.509  1.0 $\pm$ 0.0  154.4 $\pm$ 83.995
+%    Network 2    1.0 $\pm$ 0.0      2.231 $\pm$ 0.225  1.0 $\pm$ 0.0  170.9 $\pm$ 66.44
+%    Network 3    0.987 $\pm$ 0.009  1.398 $\pm$ 0.008  1.0 $\pm$ 0.0  250.0 $\pm$ 22.034
+%    Network 4    0.6 $\pm$ 0.49     1.538 $\pm$ 0.251  1.0 $\pm$ 0.0  204.7 $\pm$ 53.008
+
+
 \label{table:synt_graph_local}
 \end{table}
 
@@ -203,7 +214,7 @@ The adjacency matrices and global degree distributions are presented in Figure \
 
 For each dataset described earlier, we run a MCMC inference consisting of 200 iterations to learn the posterior distribution for the IMMSB and ILFM  models described in section \ref{sec:models}. For IMMSB, the concentration parameters of HDP were optimized according to  \cite{HDP} using vague gamma priors $\alpha_0 \sim \text{Gamma}(1,1)$ and $\gamma \sim \text{Gamma}(1,1)$. The parameters for the matrix weights were fixed to $\lambda_0=\lambda_1=0.1$. For ILFM, the IBP hyper-parameter was fixed to $\alpha=0.5$ and the weights hyper-parameter to $\sigma_w = 1$. 
 
-The inference procedure was run with these settings for the four artificial networks  and five real networks.
+The inference procedure was run with these settings for the four datasets networks previously described.
 
 All our experimental platform is available online \footnote{https://github.com/dtrckd/pymake}. It is an ongoing development in order to provide a flexible way to design and run experiments and make data analysis.
 
